# DataScience-in-Production

./: Makefile  pyproject.toml
.github/workflows/: workflow.yaml
src/: Runner.py
src/config/: .env  config.py
src/database/: db.sqlite  db_model.py
