[project]
name = "nnmodel"
version = "0.1.0"
description = "Diebetes Classification"
authors = [
    {name = "K A B I L",email = "100506503+Kabilduke@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "keras (>=3.10.0,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pydantic (>=2.10.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "ruff (>=0.12.4,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

